# llm-trace-cost-attribution

./: ISSUE.md  LICENSE  README.md  pyproject.toml
data/: sample_trace.json
notebooks/: cost_waterfall_demo.ipynb
src/llm_trace_cost/: __init__.py  attribution.py  pricing.py
